# BSDBuild

./: CHANGELOG.md  INSTALL  Makefile  README  README.conf  README.md  bsdbuild.vim  build.lib.mk  build.perl.mk  build.po.mk  build.prog.mk  build.proj.mk  build.subdir.mk  build.www.mk  configure  configure.in  csoft.common.mk  csoft.den.mk  csoft.dep.mk  csoft.doc.mk  csoft.lib.mk  csoft.man.mk  csoft.none.mk  csoft.perl.mk  csoft.po.mk  csoft.prog.mk  csoft.subdir.mk  csoft.www.mk  h2mandoc.pl  hstrip.pl  inc.glib.mk  inc.pth.mk  inc.pthread.mk  inc.sdl.mk  inc.smpeg.mk  inc.x11.mk  man2mediawiki.pl  man2wiki.pl  manlinks.pl  manreader.cgi  (+19 more)
BSDBuild/: Builtins.pm  Core.pm  Mail-SpamAssassin.pm  Makefile  ada.pm  agar-ada-core.pm  agar-ada.pm  agar-au.pm  agar-core-ada.pm  agar-core.defs.pm  agar-core.pm  agar-core.types.pm  agar-dev.pm  agar-map.pm  agar-math.pm  agar-micro.pm  agar-net.pm  agar-network.pm  agar-opengl.pm  agar-rg.pm  agar-sc.pm  agar-sg.pm  agar-sk.pm  agar-threads.pm  agar-vg.pm  agar.defs.pm  agar.pm  agar.types.pm  alsa.pm  altivec.pm  arc4random.pm  asprintf.pm  byte_order.pm  cc.pm  cc_attributes.pm  cg.pm  clock_gettime.pm  clock_win32.pm  cocoa.pm  cracklib.pm  (+129 more)
ChangeLogs/: Release-2.4.txt  Release-2.5.txt  Release-2.6.txt  Release-2.7.txt  Release-2.8.txt  Release-2.9.txt  Release-3.0.txt  Release-3.1.txt  Release-3.2.txt
ManReader/: Makefile  Mdoc.pm
Manuconf/: Core.pm  Makefile  agar-map.pm  agar-net.pm  agar-rg.pm  agar-sc.pm  agar-sg.pm  agar-vg.pm  agar.pm  arc4random.pm  asprintf.pm  bsd_types.pm  cc.pm  cg.pm  cracklib.pm  fastcgi.pm  (+38 more)
(+38 files in other folders)
