# Public domain

MDEFINE(SHAREDIR, "$PREFIX/share/bsdbuild")
MDEFINE(VERSION, "2.7-beta")
MDEFINE(RELEASE, "Horrific Prophecy")

echo "*"
echo "* Configuration successful."
echo "* Use \"make all install\" to compile and install BSDBuild."
echo "* Use \"make install-links\" to install links to source (for developers)."
echo "*"

