# Public domain

PACKAGE("BSDBuild")
VERSION("2.9")
RELEASE("Blast of Ancient Atmospheres")

MDEFINE(SHAREDIR, "$PREFIX/share/bsdbuild")

echo "*"
echo "* Configuration successful."
echo "* Use \"make all install\" to compile and install BSDBuild."
echo "* Use \"make install-links\" to install links to source (for developers)."
echo "*"

